--- a/html/index.html
+++ b/html/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head><title>pediTM web</title></head>
 <html><body><h1>hentai</h1>
-    <p>raindrop is sound very <em>sussy</em><br> 
-    now idk why but hes feeling <strong>horny</strong></p>
+    <p>raindrop is sound very <em>cencored</em><br> 
+    now idk why but hes feeling <strong>cencored</strong></p>
     <a href="https://pedikun.github.io">uff</a>
 
 </body>
