--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,8 @@
 <html><body><h1>hentai</h1>
     <p>raindrop is sound very <em>cencored</em><br> 
     now idk why but hes feeling <strong>cencored</strong></p>
-    <a href="https://pedikun.github.io">uff</a>
+    <a href="https://pedikun.github.io">uff</a><br>
+    <img src="https://pedikun.github.io/html/swissknife.jpg">
 
 </body>
 </html>
