--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
     <p>raindrop is sound very <em>cencored</em><br> 
     now idk why but hes feeling <strong>cencored</strong></p>
     <a href="https://pedikun.github.io">uff</a><br>
-    <img src="https://pedikun.github.io/html/swissknife.jpg">
+    <img src="/html/swissknife.jpg">
 
 </body>
 </html>
