--- a/html/index.html
+++ b/html/index.html
@@ -1,10 +1,41 @@
 <!DOCTYPE html>
-<head><title>pediTM web</title></head>
-<html><body><h1>hentai</h1>
-    <p>raindrop is sound very <em>cencored</em><br> 
-    now idk why but hes feeling <strong>cencored</strong></p>
-    <a href="https://pedikun.github.io">uff</a><br>
-    <img src="/html/swissknife.jpg">
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="description" content="jual beli mobil">
+        <meta name="author" content="pedi">
+        <meta name="keywords" content="daihatsu">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>daihatsu jambi</title>
+    </head>
+    <body style="background-color:rgb(109, 101, 101);">
+        <header>
+        <nav style="background-color:rgba(143, 124, 124, 0.438);">
+            <table>
+                <tr>
+                    <td>
+                        <a href="index.html"><img src="img\home.png" alt="home" height="100"></a>
+                    </td>
+                    <td>
+                        <a href="https://web.whatsapp.com/"><img src="img\1x1whatssap.jpg" alt="whatsapp" height="100"></a>
+                    </td>
+                    <td>
+                        <a href="https://discord.com"><img src="img\discord.jpg" alt="discord" height="100"></a>
+                    </td>
+                    <td>
+                        
+                    </td>
+                </tr>
+            </table>
+        </nav>
+        </header>
+        <main>
+            <div>
+                
+            </div>
+        </main>
+        <footer>
 
-</body>
+        </footer>
+    </body>
 </html>
