--- a/html/index.html
+++ b/html/index.html
@@ -1,41 +1,33 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="description" content="jual beli mobil">
-        <meta name="author" content="pedi">
-        <meta name="keywords" content="daihatsu">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>daihatsu jambi</title>
-    </head>
-    <body style="background-color:rgb(109, 101, 101);">
-        <header>
-        <nav style="background-color:rgba(143, 124, 124, 0.438);">
-            <table>
-                <tr>
-                    <td>
-                        <a href="index.html"><img src="img\home.png" alt="home" height="100"></a>
-                    </td>
-                    <td>
-                        <a href="https://web.whatsapp.com/"><img src="img\1x1whatssap.jpg" alt="whatsapp" height="100"></a>
-                    </td>
-                    <td>
-                        <a href="https://discord.com"><img src="img\discord.jpg" alt="discord" height="100"></a>
-                    </td>
-                    <td>
-                        
-                    </td>
-                </tr>
-            </table>
-        </nav>
-        </header>
-        <main>
-            <div>
-                
-            </div>
-        </main>
-        <footer>
+<head>
+<title>My Website</title>
+<style>
+body {
+  font-family: sans-serif;
+}
 
-        </footer>
-    </body>
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 500px;
+  background-image: img\(gift.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+main {
+  padding-top: 500px;
+}
+</style>
+</head>
+<body>
+<header>
+    <p>gift</p>
+</header>
+<main>
+</main>
+</body>
 </html>
