--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@ header {
   left: 0;
   width: 100%;
   height: 500px;
-  background-image: img/gift.jpg(gift.jpg);
+  background-image: html/img(gift.jpg);
   background-size: cover;
   background-position: center;
 }
