--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
                 <tr>
                     <td>
                     <img 
-                    src="img\gift.jpg" height=350 >
+                    src="img\gift.jpg" height=340 >
                     </td>
                 </tr>
             </table>
@@ -23,6 +23,15 @@
         <main>
             <div>
                 <p>gift.jpg</p>
+                <p>
+                    play me
+                </p>
+                <audio controls src="bdsong.mp3"></audio>
+                <p>bdsong.mp3</p>
+                <p>happy birthday haruka
+                   i am spending questinable
+                   amount of time making this
+                   good for me i guess</p>
             </div>
         </main>
         <footer>
