--- a/html/index.html
+++ b/html/index.html
@@ -28,10 +28,13 @@
                 </p>
                 <audio controls src="bdsong.mp3"></audio>
                 <p>bdsong.mp3</p>
-                <p>happy birthday haruka
-                   i am spending questinable
-                   amount of time making this
-                   good for me i guess</p>
+                <p>happy birthday haruka</p>
+                    <p>i am spending questinable</p>
+                    <p>amount of time making this</p>
+                    <p>good for me i guess</p>
+            </div>
+            <div>
+                <p>hall of  ̶ ̶s̶h̶a̶m̶e̶ fame</p>
             </div>
         </main>
         <footer>
