--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,8 @@
         </header>
         <main>
             <div>
-                <p>gift.jpg</p>
+                <p>gift.jpg</
+                               >
                 <p>
                     play me
                 </p>
@@ -35,6 +36,9 @@
             </div>
             <div>
                 <p>hall of  ̶ ̶s̶h̶a̶m̶e̶ fame</p>
+            </div>
+            <div>
+                    <img src="https://cdn.discordapp.com/attachments/996021008706326528/1168391498581159999/angryE.jpg?ex=65519860&is=653f2360&hm=e624e62ba2397fd007555678a52168851f68f82fb70aaeb0defe14ebab38914e&" width=340>
             </div>
         </main>
         <footer>
