--- a/html/index.html
+++ b/html/index.html
@@ -40,25 +40,25 @@
             <div>
                 <table>
                     <tr>
-                    <img src="https://cdn.discordapp.com/attachments/996021008706326528/1168391498581159999/angryE.jpg?ex=65519860&is=653f2360&hm=e624e62ba2397fd007555678a52168851f68f82fb70aaeb0defe14ebab38914e&" width=340>
+                        <td><img src="https://cdn.discordapp.com/attachments/996021008706326528/1168391498581159999/angryE.jpg?ex=65519860&is=653f2360&hm=e624e62ba2397fd007555678a52168851f68f82fb70aaeb0defe14ebab38914e&" width=340></td>
                     </tr>
                     <tr>
-                        <img src="https://media.discordapp.net/attachments/996021008706326528/1168391960676024360/sleep.jpg?ex=655198cf&is=653f23cf&hm=17c4e37d955f4e933993afa25b1714f46c340106f13b34a9221a2c059ad527b9&://media.discordapp.net/attachments/996021008706326528/1168391800625582080/ukulele.jpg?ex=655198a8&is=653f23a8&hm=8a6bc9210fed1be10f6f003b8b92a07a3fca731c85b5c83ec1024035dbe811f4&" width=340>
+                        <td><img src="https://media.discordapp.net/attachments/996021008706326528/1168391960676024360/sleep.jpg?ex=655198cf&is=653f23cf&hm=17c4e37d955f4e933993afa25b1714f46c340106f13b34a9221a2c059ad527b9&://media.discordapp.net/attachments/996021008706326528/1168391800625582080/ukulele.jpg?ex=655198a8&is=653f23a8&hm=8a6bc9210fed1be10f6f003b8b92a07a3fca731c85b5c83ec1024035dbe811f4&" width=340></td>
                     </tr>
                     <tr>
-                        <img src="https://media.discordapp.net/attachments/996021008706326528/1168392528060481536/thedaily.png?ex=65519956&is=653f2456&hm=af766081a5d0e7d3c1e7f122a0ed6cb789f387251d2b4d1a7e3c48c3466748de&" width=340>
+                        <td><img src="https://media.discordapp.net/attachments/996021008706326528/1168392528060481536/thedaily.png?ex=65519956&is=653f2456&hm=af766081a5d0e7d3c1e7f122a0ed6cb789f387251d2b4d1a7e3c48c3466748de&" width=340></td>
                     </tr>
                     <tr>
-                        <img src="https://cdn.discordapp.com/attachments/996021008706326528/1168392860278718496/nyanyan.png?ex=655199a5&is=653f24a5&hm=ba58acadbf1673d91ff98c89f283b6a7e14cb0b261dbfaf619f53f69c8f695f5&" width=340>
+                        <td><img src="https://cdn.discordapp.com/attachments/996021008706326528/1168392860278718496/nyanyan.png?ex=655199a5&is=653f24a5&hm=ba58acadbf1673d91ff98c89f283b6a7e14cb0b261dbfaf619f53f69c8f695f5&" width=340></td>
                     </tr>
                     <tr>
-                        <img src="https://media.discordapp.net/attachments/996021008706326528/1168393852097400872/IMG_20230610_092413_406.jpg?ex=65519a92&is=653f2592&hm=9944489194764b30bb71ae89d4d600a3432b28e82648aed402fddc91f62f401e&" width=340>
+                        <td><img src="https://media.discordapp.net/attachments/996021008706326528/1168393852097400872/IMG_20230610_092413_406.jpg?ex=65519a92&is=653f2592&hm=9944489194764b30bb71ae89d4d600a3432b28e82648aed402fddc91f62f401e&" width=340></td>
                     </tr>
                     <tr>
-                        <img src="https://media.discordapp.net/attachments/996021008706326528/1168394409881112616/IMG-20230728-WA0005.jpg?ex=65519b17&is=653f2617&hm=9f577904a22bb5e44041864d95b9ce74645e9612d1528066e0dd9fa29ae56792&" width=340>
+                        <td><img src="https://media.discordapp.net/attachments/996021008706326528/1168394409881112616/IMG-20230728-WA0005.jpg?ex=65519b17&is=653f2617&hm=9f577904a22bb5e44041864d95b9ce74645e9612d1528066e0dd9fa29ae56792&" width=340></td>
                     </tr>
                     <tr>
-                        <img src="https://media.discordapp.net/attachments/996021008706326528/1168394593495175268/20220414_153233.jpg?ex=65519b42&is=653f2642&hm=564e6e58d5f3ecbc24209e5fb24cd6a39eb49f04c4125cff6db1449ee6ca8903&" width=340>
+                        <td><img src="https://media.discordapp.net/attachments/996021008706326528/1168394593495175268/20220414_153233.jpg?ex=65519b42&is=653f2642&hm=564e6e58d5f3ecbc24209e5fb24cd6a39eb49f04c4125cff6db1449ee6ca8903&" width=340></td>
                     </tr>                  
                 </table>
             </div>
