--- a/html/index.html
+++ b/html/index.html
@@ -36,6 +36,7 @@
             </div>
             <div>
                 <p>hall of  ̶ ̶s̶h̶a̶m̶e̶ fame</p>
+                <p>long press to download</p>
             </div>
             <div>
                 <table>
