--- a/html/index.html
+++ b/html/index.html
@@ -61,7 +61,10 @@
                     </tr>
                     <tr>
                         <td><img src="https://media.discordapp.net/attachments/996021008706326528/1168394593495175268/20220414_153233.jpg?ex=65519b42&is=653f2642&hm=564e6e58d5f3ecbc24209e5fb24cd6a39eb49f04c4125cff6db1449ee6ca8903&" width=340></td>
-                    </tr>                  
+                    </tr>
+                    <tr>
+                        <td><img src="https://cdn.discordapp.com/attachments/1152180340484493383/1168881827231059968/Screenshot_20231031-180319.png?ex=65536108&is=6540ec08&hm=42fe581ef9e3c8c96cd0eb2d253ac8669c1ec09b6b7c42415aeb2bc23dd4d623&" width=340></td>
+                    </tr>
                 </table>
                 
             </div>
