--- a/html/index.html
+++ b/html/index.html
@@ -70,7 +70,8 @@
             </div>
         </main>
         <footer>
-
+                <p>made with love by pedi</p>
+                <p>might already show it to someone else</p>
         </footer>
     </body>
   </html>
