--- a/html/index.html
+++ b/html/index.html
@@ -65,6 +65,9 @@
                     <tr>
                         <td><img src="https://cdn.discordapp.com/attachments/1152180340484493383/1168881827231059968/Screenshot_20231031-180319.png?ex=65536108&is=6540ec08&hm=42fe581ef9e3c8c96cd0eb2d253ac8669c1ec09b6b7c42415aeb2bc23dd4d623&" width=340></td>
                     </tr>
+                    <tr>
+                        <td><img src="https://cdn.discordapp.com/attachments/993422293072089190/1171042143909990400/Screenshot_20231106-170138.png?ex=655b3cfc&is=6548c7fc&hm=640b5a24b5c282fc0d8ecd2df6f5582bba86ad7fb3cc51b2540e93379129daf2&" width=340></td>
+                    </tr>
                 </table>
                 
             </div>
