--- a/html/index.html
+++ b/html/index.html
@@ -68,6 +68,9 @@
                     <tr>
                         <td><img src="https://cdn.discordapp.com/attachments/993422293072089190/1171042143909990400/Screenshot_20231106-170138.png?ex=655b3cfc&is=6548c7fc&hm=640b5a24b5c282fc0d8ecd2df6f5582bba86ad7fb3cc51b2540e93379129daf2&" width=340></td>
                     </tr>
+                    <tr>
+                        <td><iframe width="340" height="160" src="https://www.youtube.com/embed/wD_jlVgvQuc?si=ri-71UQc1VccPLlp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></td>
+                    </tr>
                 </table>
                 
             </div>
