--- a/html/index.html
+++ b/html/index.html
@@ -22,14 +22,14 @@
         </header>
         <main>
             <div>
-                <p>gift.jpg</
-                               >
+                <p>gift.jpg</p>
+                        
                 <p>
                     play me
                 </p>
                 <audio controls src="bdsong.mp3"></audio>
                 <p>bdsong.mp3</p>
-                <p>happy birthday haruka</p>
+                <p>happy birthday nuek</p>
                     <p>i am spending questinable</p>
                     <p>amount of time making this</p>
                     <p>good for me i guess</p>
